<resources>
    <string name="app_name">Computer Remote</string>
    <string name="arrow_keys">Arrow Keys</string>
    <string name="swipe">Swipe</string>
    <string name="connect">CONNECT</string>
    <string name="air_mouse">Air Mouse</string>
    <string name="touchPad">TouchPad</string>
    <string name="input_text">Input Text</string>
    <string name="ConnectionError">Connection Error</string>
    <string name="Disconnected">Disconnected</string>
    <string name="ProblemSendingText">Problem Sending Text</string>
    <string name="TimeoutCheckIpPortOrUpdate">Timeout.  Check IP, Port, or Update the Programs on Both Sides</string>
    <string name="PleaseUpdateThisApp">Please Update This App</string>
    <string name="PleaseUpdateTheComputerSideReceiverProgram">Please Update the Computer Side Receiver Program</string>
    <string name="FailedToReachGooglePlay">Failed to Reach Google Play</string>
    <string name="subscription">Subscription</string>
    <string name="start">START</string>
    <string name="start_full_access">Start Full Access</string>
    <string name="Check_Connection">Check Connection</string>
    <string name="retry">RETRY</string>
    <string name="Annual_Subscription">Annual Subscription</string>
    <string name="please_avoid_this_device_to_be_perpendicular">Please avoid this device being perpendicular to the ground</string>

    <!--Help.xml-->
    <string name="currently_works_with_windows_only">Currently works with Windows only.</string>
    <string name="please_run_the_receiver_program_on_your_pc_the_download_link_is_in_the_website_below">Please run the Receiver Program on Your PC.\nThe download link is in this website:</string>
    <string name="you_could_make_a_search_on_your_pc_to_reach_the_website">You could make a web search on your PC\nto reach the website.</string>
    <string name="the_receiver_program_will_show_its_ip_numbers_try_them_in_this_app">The receiver program will show the IP numbers.\nPlease type the IP into this app.</string>
    <string name="ok">OK</string>
    <string name="jahhow_s_app" translatable="false">Jahhow\'s App</string>

    <!--TcpIp Guide-->
    <string name="please_run_the_receiver_program_on_your_pc">Please run the Receiver Program on Your PC</string>
    <string name="Connect_Via_Internet">Connect Via Internet</string>
    <string name="connection_guide">Connection Guide</string>
    <string name="if_your_pc_could_connect_to_wifi">If Your PC Could Connect to WiFi</string>
    <string name="you_could_use_wifi_hotspot_on_this_device_____">Please open WiFi Hotspot on this device,\nthen connect your PC to this device through WiFi.</string>
    <string name="if_you_have_a_wifi_router">If You Have a WiFi Router</string>
    <string name="connect_your_pc_to_the_router_either_through_a_cable_or_wifi_then_connect_this_device_to_the_wifi">Please connect your PC to the router either through a Cable or WiFi. And connect this device to the router\'s WiFi.</string>
    <string name="other_conditions">Other Conditions</string>
    <string name="success_rate_is_low_njust_connect_your_pc_and_this_device_to_the_internet_then_go_to_the_next_step">Success rate is low.\nJust connect your PC and this device to the internet,\nthen go to the next step.</string>

    <!--Input Text-->
    <string name="Select_All">Select All</string>
    <string name="cut">Cut</string>
    <string name="Copy">Copy</string>
    <string name="Paste">Paste</string>
    <string name="This_device_does_not_supportAirMouse">This device doesn\'t support Air Mouse</string>
    <string name="complete_text_on_this_device_then_press_send_button">Please complete text on this device\nthen press Send button</string>

    <!--Connector Switcher-->
    <string name="internet">Internet</string>
    <string name="bluetooth">Bluetooth</string>
    <string name="this_device_doesn_t_support_bluetooth">This device doesn\'t support Bluetooth.</string>
    <string name="turning_on_bluetooth">Turning On Bluetooth</string>
    <string name="turn_on">Turn On</string>

    <!--Bluetooth Connector-->
    <string name="bluetooth_timeout">Timeout</string>
    <string name="pairedBluetoothDevice">Saved</string>
    <string name="bluetooth_device_nearby">Device Nearby</string>
    <string name="scan">Scan</string>
    <string name="connecting">Connecting</string>
    <string name="please_select_a_pc_to_control">Please select the PC you wish to control</string>

    <!--Bluetooth Error-->
    <string name="bluetooth_bond_error">Please try to remove the Bluetooth bond on the computer, then try again.</string>
    <string name="bluetooth_common_error_help_text">Please insure the receiver program is running on your PC, and the Bluetooth there is enabled.</string>
    <string name="the_receiver_download_link_is_in_this_website">The receiver download link is in this website:</string>
    <string name="the_supported_receiver_version_is_v2">The supported receiver version is V2</string>
</resources>