<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:text="@string/Connect_Via_Internet"
            android:textSize="20sp" />

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="28sp"
            android:text="@string/the_receiver_program_will_show_its_ip_numbers_try_them_in_this_app" />

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="28sp"
            android:text="@string/the_receiver_download_link_is_in_this_website" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4sp"
            android:layout_marginBottom="4sp"
            android:background="#0000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="OpenJahhowAppWebsite"
                android:padding="12dp"
                android:text="@string/jahhow_s_app"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <TextView
            style="@style/AppTheme.Help_Text"
            android:text="@string/make_a_search_on_your_pc_to_reach_the_website" />

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="36sp"
            android:text="@string/connection_guide"
            android:textSize="20sp" />

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="26sp"
            android:text="@string/if_your_pc_could_connect_to_wifi" />

        <TextView
            style="@style/AppTheme.Help_Text"
            android:layout_marginTop="14sp"
            android:text="@string/you_could_use_wifi_hotspot_on_this_device_____" />

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="28sp"
            android:text="@string/if_you_have_a_wifi_router" />

        <TextView
            style="@style/AppTheme.Help_Text"
            android:layout_marginTop="14sp"
            android:text="@string/connect_your_pc_to_the_router_either_through_a_cable_or_wifi_then_connect_this_device_to_the_wifi" />


        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="28sp"
            android:text="@string/other_conditions" />

        <TextView
            style="@style/AppTheme.Help_Text"
            android:layout_marginTop="14sp"
            android:text="@string/success_rate_is_low_just_connect_your_pc_and_this_device_to_the_internet_then_go_to_the_next_step" />

        <Button
            android:id="@+id/buttonOk"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:text="@string/ok" />
    </LinearLayout>
</ScrollView>