<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/connection_guide"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="20sp"
            android:textStyle="bold"
            app:lineHeight="28sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            android:text="@string/if_your_pc_could_connect_to_wifi"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:lineHeight="28sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/you_could_use_wifi_hotspot_on_this_device_____"
            android:textAlignment="center"
            app:lineHeight="28sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            android:text="@string/if_you_have_a_wifi_router"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:lineHeight="28sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/connect_your_pc_to_the_router_either_through_a_cable_or_wifi_then_connect_this_device_to_the_wifi"
            android:textAlignment="center"
            app:lineHeight="28sp" />


        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28sp"
            android:text="@string/other_conditions"
            android:textAlignment="center"
            android:textColor="?android:textColorPrimary"
            android:textSize="16sp"
            android:textStyle="bold"
            app:lineHeight="28sp" />

        <android.support.v7.widget.AppCompatTextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10sp"
            android:text="@string/success_rate_is_low_njust_connect_your_pc_and_this_device_to_the_internet_then_go_to_the_next_step"
            android:textAlignment="center"
            app:lineHeight="28sp" />

        <Button
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:onClick="PopFragmentStack"
            android:text="@string/ok" />
    </LinearLayout>
</ScrollView>