<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:gravity="center_horizontal"
        android:orientation="vertical"
        android:padding="24dp">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="-12dp"
            android:adjustViewBounds="true"
            android:clickable="true"
            android:elevation="14dp"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            android:maxWidth="282.66666pt"
            android:onClick="OpenJahhowAppWebsite"
            android:outlineProvider="bounds"
            android:src="@drawable/receiver"
            tools:ignore="ContentDescription"
            tools:targetApi="m" />

        <TextView
            style="@style/AppTheme.Help_Text"
            android:layout_marginTop="32sp"
            android:text="@string/currently_works_with_windows_only" />

        <TextView
            style="@style/AppTheme.Help_Text.Title"
            android:layout_marginTop="28sp"
            android:text="@string/please_run_the_receiver_program_on_your_pc_the_download_link_is_in_the_website_below" />

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="3sp"
            android:background="#0000">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:background="?selectableItemBackgroundBorderless"
                android:clickable="true"
                android:focusable="true"
                android:onClick="OpenJahhowAppWebsite"
                android:padding="12dp"
                android:text="@string/jahhow_s_app"
                android:textSize="16sp"
                android:textStyle="bold" />
        </FrameLayout>

        <Button
            android:id="@+id/buttonOk"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12sp"
            android:layout_marginBottom="16sp"
            android:text="@string/ok" />
    </LinearLayout>
</ScrollView>